Corrected Rendering on About Page
Corrected a rendering bug on the about page if viewed on a window that was too wide. The image would run into the footer.

--- a/site/_sass/_layout.scss
+++ b/site/_sass/_layout.scss
@@ -294,6 +294,10 @@ article hr {
     background-color: transparent;
 }
 
+#about-page {
+    min-height: 420px;
+}
+
 .about-image {
     float: left;
     margin-right: 50px;
